users login redirect page

--- a/App/Modules/Frontend/Views/layouts/common/store/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/store/header.phtml
@@ -48,7 +48,9 @@
                                 <li><a href="<?php 
                                             if(!$this->member->isLoggedIn()){
                                              echo $this->url->get('/auth/login');
-                                            }else{}
+                                            }else{
+												echo $this->url->get('/account');
+											}
                                              ?>">Users</a></li>
                              <li>
                                 <a href="<?php echo $this->url->get('/vendor/login'); ?>">Vendor</a>
