star review and UI changes

--- a/App/Modules/Frontend/Views/store/tours.phtml
+++ b/App/Modules/Frontend/Views/store/tours.phtml
@@ -71,26 +71,38 @@
     <div class="row tour-box-container" id="form1" style="display:none" >
                   <?php if ($groupTours && $groupTours->count() > 0) { ?>
                     <?php foreach ($groupTours as $groupTour) { ?>
-                
+                <!-- box view -->
                <div id="grid" class="tour-box-view show" >
                <div class="col-xs-6 col-sm-4">
                     <div class="tour-box-smr clearfix">
                    <img style="width:100%; height:300px;" src="<?php echo $groupTour->tour->getDefaultImage() ? $groupTour->tour->getDefaultImage()->getImageUri('thumb') : ''; ?>" />
                    <div class="tour-box-smr-detail">
                       <div class="tour-box-smr-review">
+					   <!--
                          <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
                              <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
                                    <span>(1403)</span>
-                                      </div>
+					   -->
+						   <ul class="review">
+							   <li class="text-yellow">
+								   <div id="star-rate-box-<?php echo $groupTour->tour->tourId; ?>"></div>
+								   <script>
+									   jQuery(function () {
+									   jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourRating ? $groupTour->tour->tourRating->getStar() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+								   });</script>
+							   </li>
+							   <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
+						   </ul>
+                       </div>
 
                     <div class="tour-box-smr-dtls">
                     <a href="<?php echo $groupTour->tour->getUri(); ?>"><?php echo $groupTour->tour->tourTitle; ?></a>
                     </div>
                     
                     <div class="tour-box-smr-detail-bottom clearfix">
-                    <div class="tour-box-smr-detail-bottom-lft">Fellow LLC •&nbsp;<?php 
+                    <div class="tour-box-smr-detail-bottom-lft">Location:&nbsp;<?php 
 					if($groupTour->tour->tourCity){ echo $groupTour->tour->tourCity; } else { echo '';}
-					?>
+					?><br>Duration: <?php echo $groupTour->tour->tourDuration->lengthTypeText;?>
                     </div>
                     <div class="tour-box-smr-detail-bottom-rht w-col">
 				   <?php if ($groupTour->tour->tourPrice->hasDiscount() || $groupTour->tour->tourPrice->hasOffers()) { ?>
