added vendor id in the form

--- a/App/Modules/Frontend/Views/account/reviews.phtml
+++ b/App/Modules/Frontend/Views/account/reviews.phtml
@@ -149,6 +149,7 @@
 											<input type="hidden" name="galleries[reviewId]" value="<?php echo $review->reviewId; ?>" class="">
 											<input type="hidden" name="galleries[tourId]" value="<?php echo $review->tour->tourId; ?>">
 											<input type="hidden" name="galleries[memberId]" value="<?php echo $memberId; ?>">
+											<input type="hidden" name="galleries[vendorId]" value="<?php echo $review->review->vendorId; ?>">
 											<div class="thumbnail">
 												<span class="preview"><img alt="" data-dz-thumbnail></span>
 												<div class="caption">
