added menu to add new review

--- a/App/Modules/Frontend/Views/account/common/reviews_sidebar.phtml
+++ b/App/Modules/Frontend/Views/account/common/reviews_sidebar.phtml
@@ -2,5 +2,6 @@
     <ol>
         <li><a href="<?php echo $this->url->get('/account/reviews/confirmed'); ?>"><i class="glyphicon glyphicon-sunglasses"></i>Confirmed review</a></li>
         <li><a href="<?php echo $this->url->get('/account/reviews/pending'); ?>"><i class="glyphicon glyphicon-pencil"></i> Pending review</a></li>
+        <li><a href="<?php echo $this->url->get('/account/reviews/new'); ?>"><i class="glyphicon glyphicon-plus"></i> Add new review</a></li>
     </ol>
 </div>
